Added more content

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 </head>
 
 <body>
-  <nav class="nav-custom-style nav-custom-position">
+  <nav class="nav-custom-style nav-custom-position z-depth-3">
     <div class="nav-wrapper">
       <div class="nav-header-position">
         <a href="#" class="nav-header">Ed Pantzar</a>
@@ -43,6 +44,31 @@
         <div class="col s7">
           <h1>This Is Not an Image Of Me!</h1>
         </div>
+      </div>
+    </div>
+    <div class="section-banner flow-text">
+      <header>
+        <span>ABOUT</span>
+      </header>
+    </div>
+    <div class="texture-bg">
+      <div class="about flow-text">
+        <p>
+          Former digital marketer turned full stack developer with an education in human 
+          physiology and a passion for user-centric design.
+        </p>
+        <p>
+          I became passionate about building and improving websites as a digital marketer. 
+          This passion inspired me to pursue a career in full stack development becasue it would
+          open the oppertunity for me have a greater impact while working on projects. To
+          compliment my career change, I relocated from Boulder, CO to Austin, TX and spent
+          every day dedicated to learning the fundamentals of programming. 
+        </p>
+        <p> 
+          Now, I'm searching for a full stack development position in the fitness or 
+          health care industry, where I can merge my knowledge of human physiology with 
+          technology.
+        </p>
       </div>
     </div>
   </main>
