Added project cards

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -35,7 +35,7 @@
     <li><a href="#about">About</a></li>
     <li><a href="#experience">Experience</a></li>
     <li><a href="#projects">Projects</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
   
   <main class="main-content-position">
@@ -174,7 +174,7 @@
                 </p>
               </div>
               <div class="card-action">
-                <a href="find-your-high.surge.sh">Find Your High</a>
+                <a href="http://find-your-high.surge.sh/" target="_blank">Find Your High</a>
               </div>
             </div>
           </div>
@@ -192,27 +192,35 @@
                 </p>
               </div>
               <div class="card-action">
-                <a href="energy-live.surge.sh">Energy Live</a>
+                <a href="http://energy-live.surge.sh/" target="_blank">Energy Live</a>
               </div>
             </div>
           </div>
           <div class="col s12 m6 l4 project-card">
             <div class="card project-card">
               <div class="card-image">
-                <img src="find-your-high.jpg">
+                <img src="pixel-art.png">
               </div>
               <div class="card-content">
-                <span class="card-title">Card Title</span>
-                <p>I am a very simple card. I am good at containing small bits of information.
-                I am convenient because I require little markup to use effectively.</p>
+                <span class="card-title">Pixel Art Maker</span>
+                <p>
+                  A pixel paint program for making silly pictures. The program allows users to 
+                  select custom colors and features a double-click flood fill applied with a 
+                  4-direction "seed fill" algorithm.
+                </p>
               </div>
               <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="http://broad-toothpaste.surge.sh/" target="_blank">Pixel Art Maker</a>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+    <div id="contact" class="section-banner flow-text">
+      <header>
+        <span>Contact</span>
+      </header>
     </div>
 
   </main>
