Added scroll spy and some other small changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </nav>
 
   <!--Mobile nav ul-->
-  <ul class="sidenav" id="mobile-demo">
+  <ul class="sidenav sidenav-close" id="mobile-demo">
     <li><a href="#about">About</a></li>
     <li><a href="#experience">Experience</a></li>
     <li><a href="#projects">Projects</a></li>
@@ -46,182 +46,190 @@
         </div>
       </div>
     </div>
-    <div id="about" class="section-banner flow-text">
-      <header>
-        <span>ABOUT</span>
-      </header>
-    </div>
-    <div class="texture-bg">
-      <div class="about flow-text">
-        <p>
-          Former digital marketer turned full stack developer with an education in human 
-          physiology and a passion for user-centric design.
-        </p>
-        <p>
-          I became passionate about building and improving websites as a digital marketer. 
-          This passion inspired me to pursue a career in full stack development becasue it would
-          open the oppertunity for me have a greater impact while working on projects. To
-          compliment my career change, I relocated from Boulder, CO to Austin, TX and spent
-          every day dedicated to learning the fundamentals of programming. 
-        </p>
-        <p> 
-          Now, I'm searching for a full stack development position in the fitness or 
-          health care industry, where I can merge my knowledge of human physiology with 
-          technology.
-        </p>
+    <section id="about" class="scrollspy">
+      <div class="section-banner flow-text">
+        <header>
+          <span>ABOUT</span>
+        </header>
       </div>
-    </div>
-    <div id="experience" class="section-banner flow-text">
-      <header>
-        <span>Experience</span>
-      </header>
-    </div>
-    <div class="texture-bg">
-      <div class="row">
-        <div class="col s12 m10 offset-m1">
-          <div class="card exp-card">
-            <div class="card-content">
-              <div class="row exp-card-header">
-                <div class="col s12 m6 valign-wrapper">
-                  <img class="card-img left" src="egauge-logo.png" alt="eGauge company logo" />
-                  <span class="exp-card-title valign left">eGauge Systems</span>
+      <div class="texture-bg">
+        <div class="about flow-text">
+          <p>
+            Digital marketer turned full stack developer with an education in human 
+            physiology and a passion for user-centric design.
+          </p>
+          <p>
+            I became passionate about building and improving websites as a digital marketer. 
+            This passion inspired me to pursue a career in full stack development becasue I wanted
+            the oppertunity to have a greater impact while working on projects. To
+            compliment my career change, I relocated from Boulder, CO to Austin, TX and spent
+            every day dedicated to learning the fundamentals of programming. 
+          </p>
+          <p> 
+            Now, I'm searching for a full stack development position in the fitness or 
+            health care industry, where I can merge my knowledge of human physiology with 
+            technology.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section id="experience" class="scrollspy">
+      <div class="section-banner flow-text">
+        <header>
+          <span>Experience</span>
+        </header>
+      </div>
+      <div class="texture-bg">
+        <div class="row">
+          <div class="col s12 m10 offset-m1">
+            <div class="card exp-card">
+              <div class="card-content">
+                <div class="row exp-card-header">
+                  <div class="col s12 m6 valign-wrapper">
+                    <img class="card-img left" src="egauge-logo.png" alt="eGauge company logo" />
+                    <span class="exp-card-title valign left">eGauge Systems</span>
+                  </div>
+                  <div class="col m6 right-align hide-on-small-only exp-card-role">
+                    <span class="flow-text">Marketing Manager</span>
+                  </div>
+                  <div class="col s12 hide-on-med-and-up exp-card-role">
+                    <span class="flow-text">Marketing Manager</span>
+                  </div>
                 </div>
-                <div class="col m6 right-align hide-on-small-only exp-card-role">
-                  <span class="flow-text">Marketing Manager</span>
+                <div class="row">
+                  <div class="col s12 exp-card-date">
+                    <span class="blue-grey-text">June 2016 - March 2018</span>
+                  </div>
                 </div>
-                <div class="col s12 hide-on-med-and-up exp-card-role">
-                  <span class="flow-text">Marketing Manager</span>
-                </div>
+                <span>Accomplishments:</span>
+                <ul>
+                  <li>Worked with the sales, marketing, and software departments to build a new website</li>
+                  <li>Designed dozens of print and digital ads using Adobe Photoshop, Illustrator, and InDesign</li>
+                  <li>Developed product labels, brochures, photos, and digital copy for five new products</li>
+                  <li>Improved lead conversion using automated email sequences</li>
+                  <li>Lead staff training and implementation of Hubspot CRM, sales, and marketing platforms</li>
+                  <li>Set up Google Analytics tracking, AdWords campaigns, and Amazon Paid Ad Campaigns</li>
+                  <li>Managed an email list of ~15,000 and executed email campaigns with Mailchimp</li>
+                  <li>Sponsored and helped to coordinate the “Energy Track” for Boulder Startup Week in 2017</li>
+                </ul>
               </div>
-              <div class="row">
-                <div class="col s12 exp-card-date">
-                  <span class="blue-grey-text">June 2016 - March 2018</span>
-                </div>
+              <div class="card-action">
+                <a href="#">eGauge.net</a>
               </div>
-              <span>Accomplishments:</span>
-              <ul>
-                <li>Worked with the sales, marketing, and software departments to build a new website</li>
-                <li>Designed dozens of print and digital ads using Adobe Photoshop, Illustrator, and InDesign</li>
-                <li>Developed product labels, brochures, photos, and digital copy for five new products</li>
-                <li>Improved lead conversion using automated email sequences</li>
-                <li>Lead staff training and implementation of Hubspot CRM, sales, and marketing platforms</li>
-                <li>Set up Google Analytics tracking, AdWords campaigns, and Amazon Paid Ad Campaigns</li>
-                <li>Managed an email list of ~15,000 and executed email campaigns with Mailchimp</li>
-                <li>Sponsored and helped to coordinate the “Energy Track” for Boulder Startup Week in 2017</li>
-              </ul>
-            </div>
-            <div class="card-action">
-              <a href="#">eGauge.net</a>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col s12 m10 offset-m1">
-          <div class="card exp-card">
-            <div class="card-content">
-              <div class="row exp-card-header">
-                <div class="col s12 m6 valign-wrapper">
-                  <img class="card-img left" src="egauge-logo.png" alt="eGauge company logo" />
-                  <span class="exp-card-title valign left">eGauge Systems</span>
-                </div>
-                <div class="col m6 right-align hide-on-small-only exp-card-role">
-                  <span class="flow-text">Technical Sales</span>
-                </div>
-                <div class="col s12 hide-on-med-and-up exp-card-role">
-                  <span class="flow-text">Technical Sales</span>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s12 exp-card-date">
-                  <span class="blue-grey-text">February 2012 - June 2015</span>
-                </div>
-              </div>
-              <span>Accomplishments:</span>
-              <ul>
-                <li>Grew a yearly revenue of $750K to $4.2M in three years</li>
-                <li>Managed 5 of the top 10 customer accounts (by annual revenue)</li>
-                <li>Developed and presented technical training for energy monitoring equipment</li>
-                <li>Trained two new sales employees on technical aspects of the product line</li>
-                <li>Became an expert of topics in renewable energy, utility billing, and power analysis markets</li>
-              </ul>
-            </div>
-            <div class="card-action">
-              <a href="#">eGauge.net</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="projects" class="section-banner flow-text">
-      <header>
-        <span>Projects</span>
-      </header>
-    </div>
-    <div class="texture-bg">
-      <div class="projects-container">
-        <div class="row project-row">
-          <div class="col s12 m6 l4 project-card">
-            <div class="card project-card">
-              <div class="card-image">
-                <img src="find-your-high.jpg">
-              </div>
+        <div class="row">
+          <div class="col s12 m10 offset-m1">
+            <div class="card exp-card">
               <div class="card-content">
-                <span class="card-title">Find Your High</span>
-                <p>
-                  A simple static webite utilizing an open API with information about different strains
-                  of marijuana. 
-                </p>
+                <div class="row exp-card-header">
+                  <div class="col s12 m6 valign-wrapper">
+                    <img class="card-img left" src="egauge-logo.png" alt="eGauge company logo" />
+                    <span class="exp-card-title valign left">eGauge Systems</span>
+                  </div>
+                  <div class="col m6 right-align hide-on-small-only exp-card-role">
+                    <span class="flow-text">Technical Sales</span>
+                  </div>
+                  <div class="col s12 hide-on-med-and-up exp-card-role">
+                    <span class="flow-text">Technical Sales</span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12 exp-card-date">
+                    <span class="blue-grey-text">February 2012 - June 2015</span>
+                  </div>
+                </div>
+                <span>Accomplishments:</span>
+                <ul>
+                  <li>Grew a yearly revenue of $750K to $4.2M in three years</li>
+                  <li>Managed 5 of the top 10 customer accounts (by annual revenue)</li>
+                  <li>Developed and presented technical training for energy monitoring equipment</li>
+                  <li>Trained two new sales employees on technical aspects of the product line</li>
+                  <li>Became an expert of topics in renewable energy, utility billing, and power analysis markets</li>
+                </ul>
               </div>
               <div class="card-action">
-                <a href="http://find-your-high.surge.sh/" target="_blank">Find Your High</a>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m6 l4">
-            <div class="card project-card">
-              <div class="card-image">
-                <img src="energy-live.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title">Energy Live</span>
-                <p>
-                  An interface for viewing electrical energy data graphically. The interface shows
-                  real-time power and historical energy for individual registers of a user-selected
-                  eGauge energy meter. 
-                </p>
-              </div>
-              <div class="card-action">
-                <a href="http://energy-live.surge.sh/" target="_blank">Energy Live</a>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m6 l4 project-card">
-            <div class="card project-card">
-              <div class="card-image">
-                <img src="pixel-art.png">
-              </div>
-              <div class="card-content">
-                <span class="card-title">Pixel Art Maker</span>
-                <p>
-                  A pixel paint program for making silly pictures. The program allows users to 
-                  select custom colors and features a double-click flood fill applied with a 
-                  4-direction "seed fill" algorithm.
-                </p>
-              </div>
-              <div class="card-action">
-                <a href="http://broad-toothpaste.surge.sh/" target="_blank">Pixel Art Maker</a>
+                <a href="#">eGauge.net</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div id="contact" class="section-banner flow-text">
-      <header>
-        <span>Contact</span>
-      </header>
-    </div>
+    </section>
+    <section id="projects" class="scrollspy">
+      <div class="section-banner flow-text">
+        <header>
+          <span>Projects</span>
+        </header>
+      </div>
+      <div class="texture-bg">
+        <div class="projects-container">
+          <div class="row project-row">
+            <div class="col s12 m6 l4 project-card">
+              <div class="card project-card">
+                <div class="card-image">
+                  <img src="find-your-high.jpg">
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Find Your High</span>
+                  <p>
+                    A simple static webite utilizing an open API with information about different strains
+                    of marijuana. 
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a href="http://find-your-high.surge.sh/" target="_blank">Find Your High</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card project-card">
+                <div class="card-image">
+                  <img src="energy-live.jpg">
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Energy Live</span>
+                  <p>
+                    An interface for viewing electrical energy data graphically. The interface shows
+                    real-time power and historical energy for individual registers of a user-selected
+                    eGauge energy meter. 
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a href="http://energy-live.surge.sh/" target="_blank">Energy Live</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4 project-card">
+              <div class="card project-card">
+                <div class="card-image">
+                  <img src="pixel-art.png">
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Pixel Art Maker</span>
+                  <p>
+                    A pixel paint program for making silly pictures. The program allows users to 
+                    select custom colors and features a double-click flood fill applied with a 
+                    4-direction "seed fill" algorithm.
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a href="http://broad-toothpaste.surge.sh/" target="_blank">Pixel Art Maker</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact" class="scrollspy">
+      <div id="contact" class="section-banner flow-text scrollspy">
+        <header>
+          <span>Contact</span>
+        </header>
+      </div>
+    </section>
 
   </main>
 
